# ASNU

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  QUICKSTART.md  README.md  analyse_networks.py  buren_community_node_distribution.csv  community_edge_distribution.csv  community_node_distribution.csv  homophily_2.py  homophily_analysis.py  ignition_analysis.py  ignition_variance.py  interaction_analysis.py  my_communities.json  pairwise_drop.py  pyproject.toml  run_single.py  skew.py  unpickle.py
analysis/: analyze_communities.py  data_aggregation.py  network_metrics.py
analysis/Experiments/: contagion_experiment.py  contagion_sweep.py  contagion_variance.py  seeding_experiments.py  seeding_strategy.py  x.py
analysis/Sensitivity Anslysis/: global_sensitivity_analysis.py  local_sensitivity_analysis.py  sensitivity_analysis.py  tempCodeRunnerFile.py
asnu/: __init__.py
docs/: network_parameters_explained.tex
examples/: basic_example.py  custom_columns_example.py
hpc_parameter_sweep/: submit_job.sh
network_generation_scripts/: combine.py  generate_enriched_networks.py  generate_networks.py  generate_single_network.py
presentation/: slides.ipynb
presentations/: gif_visual.py  graph_visual.py  slides.ipynb  slides.slides.html  slides.tex  variance_metrics.csv
tests/: generate_multiplex.py  generate_networks.py  test.py  test_basic.py  test_rust_vs_python.py  test_stratified_sampling.py
utils/: data_aggregation.py  enrich_data_aggregation.py  enrich_network_attributes.py  generate_network_1.py  get_aggregation_value.py  group_charcteristic_mapping.csv
(+26 files in other folders)
