[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asnu"
version = "0.1.0"
description = "Aggregated Social Network Unfolder - Generate large-scale population-based networks"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "networkx>=2.6.0",
    "scipy>=1.7.0",
    "openpyxl>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]
analysis = [
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "SALib>=1.4.0",
    "mlflow>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/kamielgulpen/asnu"
Documentation = "https://github.com/kamielgulpen/asnu#readme"
Repository = "https://github.com/kamielgulpen/asnu"
Issues = "https://github.com/kamielgulpen/asnu/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["asnu*"]
exclude = ["tests*", "docs*", "examples*"]
